[metadata]
name = XStatic-Vis
description = Vis 4.3.0 (XStatic packaging standard)
description-file = README.rst
maintainer = xinni.ge
maintainer-email = xinni.ge@ntt.com
home-page = http://visjs.org/
keywords = vis xstatic
license = Apache 2.0
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
